--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
     <a href="issue02.html" class='card-link'></a>
     </div>
 </div>
-
+<footer>&copy; Creatives Collective. All Rights Reserved. 2025</footer>
 </body>
 </html>
