--- a/issue01.html
+++ b/issue01.html
@@ -79,6 +79,6 @@
       <a href="issue_01/voices_of_vision.html" class='card-link'></a>
     </div>
 </div>
-
+<footer>&copy; Creatives Collective. All Rights Reserved. 2025</footer>
 </body>
 </html>
