--- a/issue02.html
+++ b/issue02.html
@@ -23,10 +23,8 @@
        </div>
   </span>
 </div>
-
 <div class="feature-gallery">
-
 </div>
-
+<footer>&copy; Creatives Collective. All Rights Reserved. 2025</footer>
 </body>
 </html>
