--- a/issue_01/letter_from_the_editor.html
+++ b/issue_01/letter_from_the_editor.html
@@ -23,6 +23,23 @@
        </div>
   </span>
 </div>
+<div class="letter">
+    <div class="le-title">Letter from the Editor</div>
+    <div class="le-content">
+      <span class="section-head">Dear Readers,</span>
+      <p>Welcome to the first issue of Creatives Collective. It is with immense pride and excitement that we present this debut edition—a celebration of talent, heritage, and innovation within the Asian creative community.</p>
+      <p>This issue was born from a deep desire to amplify the voices of those who not only shape their fields but also challenge the way the world perceives Asian identity in art, design, entrepreneurship, and beyond. Too often, the rich tapestry of Asian creativity is overlooked or simplified. Through this platform, we aim to shine a light on the individuals who embody both the timeless beauty of tradition and the bold spirit of modernity.</p>
+      <p>In this first issue, we explore the connection between generations—how heritage inspires innovation and how emerging creatives build on the legacies of those before them. From actors redefining representation to photographers and designers pushing boundaries, this issue bridges the past and future. It highlights seasoned visionaries who inspire and disrupt, alongside newcomers forging fresh paths, weaving a narrative of resilience, creativity, and cultural pride at the heart of this magazine.</p>
+      <p>As I reflect on the journey of creating this magazine, I am reminded of my own experiences navigating the world as a creative and an advocate for authentic representation. For many of us, identity is a balance of honoring where we come from while daring to imagine what’s next. It is this balance that has inspired every page of this issue.</p>
+      <p>This is more than a magazine; it is a collective effort to foster community, dialogue, and collaboration. To every contributor, reader, and supporter—you are part of this movement. Your creativity, curiosity, and passion fuel our mission to build a space where stories are told unapologetically and visions are shared without bounds.</p>
+      <p>I invite you to dive into these stories, engage with the art, and join the conversation. Let this be the beginning of a shared journey to uplift Asian creatives across the globe, one story at a time.</p>
+      <span class="section-head">With gratitude and excitement for what’s to come,</span>
+      <span class="section-head">Niva</span>
+      <span class="section-head">Editor-in-Chief</span>
+      <span class="section-head">Creative Collective</span>
 
+    </div>
+</div>
+<footer>&copy; Creatives Collective. All Rights Reserved. 2025</footer>
 </body>
 </html>
