--- a/about.html
+++ b/about.html
@@ -5,26 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creatives Collective</title>
     <!-- Add favicon image in imgs folder and link it below -->
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="icon" type="image/x-icon" href="imgs/cc_logo_white.png">  
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/mxa1riq.css">
-    <script defer src="../script.js"></script>
+    <script defer src="script.js"></script>
 
 </head>
 <body>
-<div class="dropdown">
-  <span class="header">Creatives Collective</span>
-  <span class="menu">
-    <button onclick="myFunction()" class="dropbtn">≡</button>
-      <div id="myDropdown" class="dropdown-content">
-       <a href="../index.html">Home</a>
-       <a href="../issue01.html">Issue 01</a>
-       <a href="../issue02.html">Issue 02</a>
-       </div>
-  </span>
-</div>
+  <div class="dropdown">
+    <span class="header">Creatives Collective</span>
+  </div>
+  <div class="nav">
+    <a href="index.html">Home</a>
+    <a href="fashion.html">Fashion</a>
+    <a href="creators.html">Creators</a>
+    <a href="issues.html">Issues</a>
+    <a href="about.html">About</a>
+  </div>
+
 <div class="letter">
-    <div class="le-title">Letter from the Editor</div>
+  <img src="imgs/le_bg.png" alt="">
+    <!-- <div class="le-title">Letter from the Editor</div>
     <div class="le-content">
       <span class="section-head">Dear Readers,</span>
       <p>Welcome to the first issue of Creatives Collective. It is with immense pride and excitement that we present this debut edition—a celebration of talent, heritage, and innovation within the Asian creative community.</p>
@@ -38,7 +39,7 @@
       <span class="section-head">Editor-in-Chief</span>
       <span class="section-head">Creative Collective</span>
 
-    </div>
+    </div> -->
 </div>
 <footer>&copy; Creatives Collective. All Rights Reserved. 2025</footer>
 </body>
