--- a/fashion/sabyasachi.html
+++ b/fashion/sabyasachi.html
@@ -5,26 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creatives Collective</title>
     <!-- Add favicon image in imgs folder and link it below -->
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> 
+    <link rel="icon" type="image/x-icon" href="../imgs/cc_logo_white.png">  
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://use.typekit.net/mxa1riq.css">
     <script defer src="../script.js"></script>
 
 </head>
 <body>
-<div class="dropdown">
-  <span class="header">Creatives Collective</span>
-  <span class="menu">
-    <button onclick="myFunction()" class="dropbtn">≡</button>
-      <div id="myDropdown" class="dropdown-content">
-       <a href="../index.html">Home</a>
-       <a href="../issue01.html">Issue 01</a>
-       <a href="../issue02.html">Issue 02</a>
-       </div>
-  </span>
-</div>
-<br>
-</div>
+  <div class="dropdown">
+    <span class="header">Creatives Collective</span>
+  </div>
+  <div class="nav">
+    <a href="../index.html">Home</a>
+    <a href="../fashion.html">Fashion</a>
+    <a href="../creators.html">Creators</a>
+    <a href="../issues.html">Issues</a>
+    <a href="../about.html">About</a>
+  </div>
+  
   <div class="article">
     <div class="article-image split left">
       <div class="centered">
