--- a/issues.html
+++ b/issues.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creatives Collective</title>
     <!-- Add favicon image in imgs folder and link it below -->
-    <link rel="icon" type="image/x-icon" href="imgs/cc_logo_white.png"> 
+    <link rel="icon" type="image/x-icon" href="imgs/cc_logo_white.png">  
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/mxa1riq.css">
     <script defer src="script.js"></script>
@@ -14,6 +14,16 @@
 <body>
   <div class="dropdown">
     <span class="header">Creatives Collective</span>
+    <!-- <span class="menu">
+      <button onclick="myFunction()" class="dropbtn">≡</button>
+        <div id="myDropdown" class="dropdown-content">
+         <a href="index.html">Home</a>
+         <a href="fashion.html">Fashion</a>
+         <a href="creators.html">Creators</a>
+         <a href="issues.html">Issues</a>
+         <a href="about.html">About</a>
+         </div>
+    </span> -->
   </div>
   <div class="nav">
     <a href="index.html">Home</a>
@@ -23,10 +33,19 @@
     <a href="about.html">About</a>
   </div>
 
-<div>
-  <img class="logo-mark" src="imgs/logo.png" alt="">
+<div class="footer_gap"></div>
+<div class="feature-gallery">
+    <div class="card-trip">
+      <img src="imgs/test_img.png" />
+      <div class="card-trip-infos">
+        <div>
+          <p>Issue 01</p>
+        </div>
+      </div>
+      <a href="issue01.html" class='card-link'></a>
+    </div>
 </div>
-
+<div class="footer_gap"></div>
 <footer>&copy; Creatives Collective. All Rights Reserved. 2025</footer>
 </body>
 </html>
