--- a/fashion.html
+++ b/fashion.html
@@ -26,7 +26,7 @@
 <div class="issue-gallery">
 
     <div class="card-trip">
-        <img src="imgs/test_img4.png"/>
+        <img src="imgs/westwood.png"/>
         <div class="card-trip-infos">
           <div>
             <p>Vivienne Westwood Makes a Striking Debut in India: A Fusion of Punk Couture and Textile Heritage</p>
@@ -36,7 +36,7 @@
         </div>
     
     <div class="card-trip">
-      <img src="imgs/test_img4.png"/>
+      <img src="imgs/sabya4.png"/>
       <div class="card-trip-infos">
         <div>
           <p>Sabyasachi Opens In New York</p>
@@ -47,7 +47,7 @@
       </div>
   
       <div class="card-trip">
-        <img src="imgs/test_img5.png"/>
+        <img src="imgs/cfda-1.png"/>
         <div class="card-trip-infos">
           <div>
             <p>A Historic Moment</p>
@@ -58,7 +58,7 @@
       </div>
   
       <div class="card-trip">
-        <img src="imgs/test_img3.png"/>
+        <img src="imgs/jaipur.png"/>
         <div class="card-trip-infos">
           <div>
             <p>The Timeless Craftsmanship of Jaipur Rugs</p>
