--- a/fashion/jaipur_rugs.html
+++ b/fashion/jaipur_rugs.html
@@ -27,7 +27,7 @@
  <div class="article">
    <div class="article-image split left">
      <div class="centered">
-       <img src="../imgs/test_img3.png" alt="">
+       <img src="../imgs/jaipur.png" alt="">
      </div>
    </div>
    <div class="writing">
