--- a/fashion/sabyasachi.html
+++ b/fashion/sabyasachi.html
@@ -26,7 +26,10 @@
   <div class="article">
     <div class="article-image split left">
       <div class="centered">
-        <img src="../imgs/test_img4.png" alt="">
+        <img src="../imgs/sabya4.png" alt="">
+        <img src="../imgs/sabya3.png" alt="">
+        <img src="../imgs/sabya2.png" alt="">
+        <img src="../imgs/sabya1.png" alt="">
       </div>
     </div>
     <div class="writing">
