--- a/fashion/vivienne_westwood.html
+++ b/fashion/vivienne_westwood.html
@@ -27,7 +27,7 @@
  <div class="article">
    <div class="article-image split left">
      <div class="centered">
-       <img src="../imgs/test_img3.png" alt="">
+       <img src="../imgs/westwood.png" alt="" style="width: 70%; position: relative; left: -7%;">
      </div>
    </div>
    <div class="writing">
