--- a/fashion/cfda.html
+++ b/fashion/cfda.html
@@ -26,7 +26,7 @@
   <div class="article">
     <div class="article-image split left">
       <div class="centered">
-        <img src="../imgs/test_img5.png" alt="">
+        <img src="../imgs/cfda-1.png" alt="" style="width: 70%; position: relative; left: -7%;">
       </div>
     </div>
     <div class="writing">
