--- a/issues.html
+++ b/issues.html
@@ -33,10 +33,9 @@
     <a href="about.html">About</a>
   </div>
 
-<div class="footer_gap"></div>
 <div class="feature-gallery">
     <div class="card-trip">
-      <img src="imgs/test_img.png" />
+      <img src="imgs/issue1-cover.png"/>
       <div class="card-trip-infos">
         <div>
           <p>Issue 01</p>
